<resources>
    <string name="app_name">Sejamu</string>
    <string name="title_activity_maps">Map</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <!--    bagian login-->
    <string name="masuk">Masuk</string>
    <string name="email">Masukkan email anda</string>
    <string name="password">Masukkan password anda</string>
    <string name="belum_punya">Belum punya akun?</string>

    <!--    bagian add item-->
    <string name="tambah">Tambah Item</string>
    <string name="kamera">Ambil Gambar</string>
    <string name="judul">Judul Item</string>
    <string name="harga">Harga Item</string>
    <string name="simpan">Simpan</string>

    <string name="model">Model:</string>
    <string name="device">Device:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="models">
        <item>Quantized</item>
        <item>Float</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
</resources>