<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textViewTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10sp"
            android:text="@string/tambah"
            android:textAppearance="@style/masuk"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/btCloseAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_toStartOf="@id/textViewTambah"
            android:layout_marginEnd="50dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <ImageView
                android:id="@+id/imageViewTambah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/linearLayoutTambah1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewTambah"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/editTextJudul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/judul"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/editTextHarga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/harga"
                    android:inputType="numberSigned"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutTambah2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linearLayoutTambah1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/buttonAmbilTambah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ambil Foto"
                    android:layout_marginEnd="15dp"/>

                <Button
                    android:id="@+id/buttonSimpanTambah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Simpan Item"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>